# infra-data

./: .gitignore  =4.2.0  README.md  pyproject.toml
dados-git/dados-bacen/: .fonte-dicionario.txt.swp  PIB_trimestral_ipeadata.xlsx  STP-20240822151202826.csv  STP-20240827171150836.csv  STP-20240827171950785.csv  STP-20240910111755946.csv  dicionario-fontes.txt
scripts/: consolidacao-dados-trafego.ipynb  consolidacao_dados_trafego.ipynb  regressao_PIB.ipynb  regressao_PIB_anual_OLD.ipynb  regressao_PIB_mensal.ipynb  regressao_PIB_trimestral.ipynb  scrape_dados-PIB-Bacen.ipynb  scrape_dados-trafego-ANTT.ipynb  scrape_dados.ipynb  trafego.ipynb  tratamento-dados-PIB.ipynb  tratamento_dados_PIB_anual.ipynb  tratamento_dados_PIB_mensal.ipynb  tratamento_dados_PIB_trimestral.ipynb
scripts/utils/: dir_tree.py
