[tool.poetry]
name = "infra-data"
version = "0.1.0"
description = "analise de dados de concessoes rodoviarias"
authors = ["andcm"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
chardet = "^5.2.0"
pyarrow = "^16.1.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
openpyxl = "^3.1.5"
selenium = "^4.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
